[package]
name = "vector_terrain"
version = "0.1.0"
edition = "2024"

[dependencies]
contour = "0.13.1"
image = "0.25.10"
mercantile = "0.0.1"
mvt = "0.13.0"
ndarray = "0.17.2"
oxigdal-algorithms = "0.1.4"
oxigdal-core = "0.1.4"
pmtiles = "0.23.0"
tokio = { version = "1", features = ["full"] }
webp = "0.3.1"

[profile.release]
debug = true
